[gd_scene load_steps=6 format=3 uid="uid://iadqciwwhb8e"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_n4n8f"]
[ext_resource type="PackedScene" uid="uid://cs754wu50fbsk" path="res://blenders/player.blend" id="1_pvdd6"]
[ext_resource type="AudioStream" uid="uid://c0sxuftxvlg3i" path="res://sounds/laser-gun-105781.mp3" id="3_cg6vc"]

[sub_resource type="BoxShape3D" id="BoxShape3D_bho2i"]
size = Vector3(0.8, 1.8, 0.3)

[sub_resource type="CylinderMesh" id="CylinderMesh_m557r"]
top_radius = 0.1
bottom_radius = 0.1
height = 1.0

[node name="player" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
script = ExtResource("1_n4n8f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00255127, 0)
shape = SubResource("BoxShape3D_bho2i")

[node name="player_model" parent="." instance=ExtResource("1_pvdd6")]

[node name="pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.786805, 0)

[node name="Camera3D" type="Camera3D" parent="pivot"]
transform = Transform3D(1, 0, 0, 0, 0.921077, 0.389381, 0, -0.389381, 0.921077, 0, 1.2132, 3)

[node name="MeshInstance3D" type="MeshInstance3D" parent="pivot"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.532593, -0.141551, -0.488704)
mesh = SubResource("CylinderMesh_m557r")
skeleton = NodePath("../..")

[node name="bullet_spawn" type="Node3D" parent="pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.531879, -0.136331, -1.04938)

[node name="fire_rate" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_cg6vc")
volume_db = -30.0

[connection signal="timeout" from="fire_rate" to="." method="_on_fire_rate_timeout"]

[editable path="player_model"]
